package com.randioo.demo_optimisticframe_server.protocal;

//选择飞机
message RoleChoosePlaneRequest{
	optional int32 planeId = 1;
	optional int32 index = 2;
}

message RoleChoosePlaneResponse{
	
}

//移除飞机
message RoleFallPlaneRequest{
	optional int32 index = 1;
}

message RoleFallPlaneResponse{
}
